cleaned up the code a lot, refactored it a bit, minor changes to style

--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@ body{
   font-size: 1.2em;
   line-height: 1.5em;
   text-align: center;
+  background-color: whitesmoke;
 }
 
 p:first-child{
-  background-color: beige;
+  background-color: #FAD9AD;
 }
 
 select, button, label{
